--- a/includes/builder/assets/front.css
+++ b/includes/builder/assets/front.css
@@ -1,139 +1,72 @@
-/* Container
------------------------------------------- */
-.fxb-container:after{
-	content:".";display:block;height:0;clear:both;visibility:hidden;
+.fxb-row > .fxb-wrap {
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 2em;
 }
 
 /* Rows
 ------------------------------------------ */
-.fxb-row:after{
-	content:".";display:block;height:0;clear:both;visibility:hidden;
-}
-.fxb-row{
+.fxb-row {
 	width: 100%;
 }
 
 /* Columns
 ------------------------------------------ */
-.fxb-col{
-	float: left;
-	width: 100%;
-}
-	.fxb-row-col-order-r2l .fxb-col{
-		float: right;
-	}
-
-/* 1 Columns Layout */
-.fxb-row-layout-1 .fxb-col{
+.fxb-row-layout-1 .fxb-col {
+    width: 100%;
 }
 
 /* 1/2 - 1/2 Layout */
-.fxb-row-layout-12_12 .fxb-col-1{
-	width: 47.5%;
-	margin-right: 5%;
-}
-	.fxb-row-layout-12_12.fxb-row-col-order-r2l .fxb-col-1{
-		margin-right: 0;
-		margin-left: 5%;
-	}
-.fxb-row-layout-12_12 .fxb-col-2{
-	width: 47.5%;
+.fxb-row-layout-12_12 .fxb-col-1,
+.fxb-row-layout-12_12 .fxb-col-2 {
+	width: 50%;
 }
 
 /* 1/3 - 2/3 Layout */
-.fxb-row-layout-13_23 .fxb-col-1{
-	width: 30%;
-	margin-right: 5%;
+.fxb-row-layout-13_23 .fxb-col-1 {
+	width: 33.33%;
 }
-.fxb-row-layout-13_23 .fxb-col-2{
-	width: 65%;
+.fxb-row-layout-13_23 .fxb-col-2 {
+	width: 66.66%;
 }
-	/* r2l */
-	.fxb-row-layout-13_23.fxb-row-col-order-r2l .fxb-col-1{
-		width: 65%;
-		margin-right: 0;
-		margin-left: 5%;
-	}
-	.fxb-row-layout-13_23.fxb-row-col-order-r2l .fxb-col-2{
-		width: 30%;
-	}
 
 /* 2/3 - 1/3 layout */
-.fxb-row-layout-23_13 .fxb-col-1{
-	width: 65%;
-	margin-right: 5%;
+.fxb-row-layout-23_13 .fxb-col-1 {
+	width: 66.66%;
 }
-.fxb-row-layout-23_13 .fxb-col-2{
-	width: 30%;
+.fxb-row-layout-23_13 .fxb-col-2 {
+	width: 33.33%;
 }
-	/* r2l */
-	.fxb-row-layout-23_13.fxb-row-col-order-r2l .fxb-col-1{
-		width: 30%;
-		margin-right: 0;
-		margin-left: 5%;
-	}
-	.fxb-row-layout-23_13.fxb-row-col-order-r2l .fxb-col-2{
-		width: 65%;
-	}
 
 /* 1/3 - 1/3 - 1/3 Layout */
-.fxb-row-layout-13_13_13 .fxb-col-1{
-	width: 30%;
-	margin-right: 5%;
-}
-	.fxb-row-layout-13_13_13.fxb-row-col-order-r2l .fxb-col-1{
-		margin-right: 0;
-		margin-left: 5%;
-	}
-.fxb-row-layout-13_13_13 .fxb-col-2{
-	width: 30%;
-	margin-right: 5%;
-}
-	.fxb-row-layout-13_13_13.fxb-row-col-order-r2l .fxb-col-2{
-		margin-right: 0;
-		margin-left: 5%;
-	}
-.fxb-row-layout-13_13_13 .fxb-col-3{
-	width: 30%;
+.fxb-row-layout-13_13_13 .fxb-col-1,
+.fxb-row-layout-13_13_13 .fxb-col-2,
+.fxb-row-layout-13_13_13 .fxb-col-3 {
+	width: 33.33%;
 }
 
 /* 1/4 - 1/4 - 1/4 - 1/4 Layout */
-.fxb-row-layout-14_14_14_14 .fxb-col-1{
-	width: 21.25%;
-	margin-right: 5%;
+.fxb-row-layout-14_14_14_14 .fxb-col-1,
+.fxb-row-layout-14_14_14_14 .fxb-col-2,
+.fxb-row-layout-14_14_14_14 .fxb-col-3,
+.fxb-row-layout-14_14_14_14 .fxb-col-4 {
+	width: 25%;
 }
-	.fxb-row-layout-14_14_14_14.fxb-row-col-order-r2l .fxb-col-1{
-		margin-right: 0;
-		margin-left: 5%;
-	}
-.fxb-row-layout-14_14_14_14 .fxb-col-2{
-	width: 21.25%;
-	margin-right: 5%;
-}
-	.fxb-row-layout-14_14_14_14.fxb-row-col-order-r2l .fxb-col-2{
-		margin-right: 0;
-		margin-left: 5%;
-	}
-.fxb-row-layout-14_14_14_14 .fxb-col-3{
-	width: 21.25%;
-	margin-right: 5%;
-}
-	.fxb-row-layout-14_14_14_14.fxb-row-col-order-r2l .fxb-col-3{
-		margin-right: 0;
-		margin-left: 5%;
-	}
-.fxb-row-layout-14_14_14_14 .fxb-col-4{
-	width: 21.25%;
-}
-
 
 /* Items
 ------------------------------------------ */
-.fxb-item:before{
-	content:".";display:block;height:0;clear:both;visibility:hidden;
-}
-.fxb-item{
+.fxb-item {
 	width: 100%;
+}
+
+.fxb-fullwidth {
+	box-sizing: border-box;
+	position: relative;
+	width: calc(100vw - var(--scrollbarWidth, 0));
+	max-width: initial;
+	left: 50%;
+	margin-left: calc(-50vw + var(--scrollbarWidth, 0) / 2);
+	margin-right: calc(-50vw + var(--scrollbarWidth, 0) / 2);
 }
 
 
@@ -141,9 +74,30 @@
 ------------------------------------------ */
 
 /* === MEDIA QUERIES === */
-@media screen and (max-width: 590px) {
-	.fxb-container .fxb-row .fxb-col{
+@media screen and (max-width: 768px) {
+	.fxb-container .fxb-row .fxb-col {
 		width: 100%;
 		margin: 0;
 	}
+
+    .fxb-row > .fxb-wrap {
+        flex-wrap: wrap;
+    }
+
+    .fxb-row-layout-1 .fxb-col,
+    .fxb-row-layout-12_12 .fxb-col-1,
+    .fxb-row-layout-12_12 .fxb-col-2,
+    .fxb-row-layout-13_23 .fxb-col-1,
+    .fxb-row-layout-13_23 .fxb-col-2,
+    .fxb-row-layout-23_13 .fxb-col-1,
+    .fxb-row-layout-23_13 .fxb-col-2,
+    .fxb-row-layout-13_13_13 .fxb-col-1,
+    .fxb-row-layout-13_13_13 .fxb-col-2,
+    .fxb-row-layout-13_13_13 .fxb-col-3,
+    .fxb-row-layout-14_14_14_14 .fxb-col-1,
+    .fxb-row-layout-14_14_14_14 .fxb-col-2,
+    .fxb-row-layout-14_14_14_14 .fxb-col-3,
+    .fxb-row-layout-14_14_14_14 .fxb-col-4 {
+        width: 100%;
+    }
 }
