--- a/includes/builder/assets/custom-css.css
+++ b/includes/builder/assets/custom-css.css
@@ -1,53 +1,111 @@
-.fxb-nav-css{
-	font-size: 14px;
-	float: right;
-	text-decoration: none;
-	padding: 5px 10px;
-	background: #F5F5F5;
-	border: 1px solid #ccc;
-	color: #555;
-	font-weight: 400;
-	display: none;
+.fxb-nav-css {
+    font-size: 14px;
+    float: right;
+    text-decoration: none;
+    padding: 5px 10px;
+    background: #f5f5f5;
+    border: 1px solid #ccc;
+    color: #555;
+    font-weight: 400;
+    display: none;
 }
-.rtl .fxb-nav-css{
-	float: left;
-	margin-right: 0;
+.rtl .fxb-nav-css {
+    float: left;
+    margin-right: 0;
 }
-.fx_builder_active .fxb-nav-css{
-	display: block;
+.fx_builder_active .fxb-nav-css {
+    display: block;
 }
 .fxb-nav-css:hover,
-.fxb-nav-css:focus{
-	color: #222;
-	background: #eee;
+.fxb-nav-css:focus {
+    color: #222;
+    background: #eee;
 }
-.fxb-nav-css span:before{
-	content: "\f540";
-	font-family: "dashicons";
-	vertical-align: top;
-	margin-right: 5px;
-	-webkit-font-smoothing: antialiased;
+.fxb-nav-css span:before {
+    content: "\f540";
+    font-family: "dashicons";
+    vertical-align: top;
+    margin-right: 5px;
+    -webkit-font-smoothing: antialiased;
 }
-.fxb-custom-css-textarea{
-	width: 100%;
-	height: 300px;
-	max-height: 100%;
-	font-family: Consolas,Monaco,monospace;
-	font-size: 18px;
-	line-height: 150%;
-	direction: ltr;
+.fxb-custom-css-textarea {
+    width: 100%;
+    height: 300px;
+    max-height: 100%;
+    font-family: Consolas, Monaco, monospace;
+    font-size: 18px;
+    line-height: 150%;
+    direction: ltr;
+}
+
+/**
+ * Details Element
+ */
+.fxb-details {
+    width: 100%;
+    background: #f2f2f2;
+    border-radius: 3px;
+    position: relative;
+}
+.fxb-details .summary-title {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.fxb-details:hover {
+    cursor: pointer;
+}
+.fxb-details .summary-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+    border-top: 1px solid #ffffff;
+    cursor: default;
+    padding: 1em;
+    line-height: 1.5;
+}
+.fxb-details summary,
+#poststuff .fxb-details summary {
+    list-style: none;
+    font-weight: 500;
+    padding: 1em;
+}
+.fxb-details summary:focus {
+    outline: none;
+}
+.fxb-details summary:hover .summary-chevron-up svg {
+    opacity: 1;
+}
+.fxb-details .summary-chevron-up svg {
+    opacity: 0.5;
+}
+.fxb-details .summary-chevron-up,
+.fxb-details .summary-chevron-down {
+    pointer-events: none;
+    position: absolute;
+    top: 0.75em;
+    right: 1em;
+}
+.fxb-details .summary-chevron-up svg,
+.fxb-details .summary-chevron-down svg {
+    display: block;
+}
+.fxb-details summary::-webkit-details-marker {
+    display: none;
 }
 
 /* Media Queries */
 @media only screen and (max-width: 600px) {
-	.fxb-nav-css{
-		padding: 8px 10px;
-		margin: 10px -14px 0 0;
-	}
+    .fxb-nav-css {
+        padding: 8px 10px;
+        margin: 10px -14px 0 0;
+    }
 }
 @media only screen and (max-width: 390px) {
-	.fxb-nav-css span:before{
-		content: "";
-		margin-right: 0;
-	}
+    .fxb-nav-css span:before {
+        content: "";
+        margin-right: 0;
+    }
 }
