--- a/includes/builder/assets/front.css
+++ b/includes/builder/assets/front.css
@@ -1,11 +1,11 @@
 .fxb-row > .fxb-wrap {
-	display: flex;
-	flex-wrap: nowrap;
-	gap: 2em;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 2em;
 }
 
 .fxb-row {
-	width: 100%;
+    width: 100%;
 }
 
 .fxb-row-layout-1 .fxb-col {
@@ -15,30 +15,30 @@
 /* 1/2 - 1/2 Layout */
 .fxb-row-layout-12_12 .fxb-col-1,
 .fxb-row-layout-12_12 .fxb-col-2 {
-	width: 50%;
+    width: 50%;
 }
 
 /* 1/3 - 2/3 Layout */
 .fxb-row-layout-13_23 .fxb-col-1 {
-	width: 33.33%;
+    width: 33.33%;
 }
 .fxb-row-layout-13_23 .fxb-col-2 {
-	width: 66.66%;
+    width: 66.66%;
 }
 
 /* 2/3 - 1/3 layout */
 .fxb-row-layout-23_13 .fxb-col-1 {
-	width: 66.66%;
+    width: 66.66%;
 }
 .fxb-row-layout-23_13 .fxb-col-2 {
-	width: 33.33%;
+    width: 33.33%;
 }
 
 /* 1/3 - 1/3 - 1/3 Layout */
 .fxb-row-layout-13_13_13 .fxb-col-1,
 .fxb-row-layout-13_13_13 .fxb-col-2,
 .fxb-row-layout-13_13_13 .fxb-col-3 {
-	width: 33.33%;
+    width: 33.33%;
 }
 
 /* 1/4 - 1/4 - 1/4 - 1/4 Layout */
@@ -46,21 +46,30 @@
 .fxb-row-layout-14_14_14_14 .fxb-col-2,
 .fxb-row-layout-14_14_14_14 .fxb-col-3,
 .fxb-row-layout-14_14_14_14 .fxb-col-4 {
-	width: 25%;
+    width: 25%;
+}
+
+/* 1/5 - 1/5 - 1/5 - 1/5 - 1/5 Layout */
+.fxb-row-layout-15_15_15_15_15 .fxb-col-1,
+.fxb-row-layout-15_15_15_15_15 .fxb-col-2,
+.fxb-row-layout-15_15_15_15_15 .fxb-col-3,
+.fxb-row-layout-15_15_15_15_15 .fxb-col-4,
+.fxb-row-layout-15_15_15_15_15 .fxb-col-5 {
+    width: 20%;
 }
 
 .fxb-item {
-	width: 100%;
+    width: 100%;
 }
 
 .fxb-fullwidth {
-	box-sizing: border-box;
-	position: relative;
-	width: calc(100vw - var(--scrollbarWidth, 0));
-	max-width: initial;
-	left: 50%;
-	margin-left: calc(-50vw + var(--scrollbarWidth, 0) / 2);
-	margin-right: calc(-50vw + var(--scrollbarWidth, 0) / 2);
+    box-sizing: border-box;
+    position: relative;
+    width: calc(100vw - var(--scrollbarWidth, 0));
+    max-width: initial;
+    left: 50%;
+    margin-left: calc(-50vw + var(--scrollbarWidth, 0) / 2);
+    margin-right: calc(-50vw + var(--scrollbarWidth, 0) / 2);
 }
 
 .fxb-wrap img {
@@ -69,10 +78,10 @@
 }
 
 @media screen and (max-width: 768px) {
-	.fxb-container .fxb-row .fxb-col {
-		width: 100%;
-		margin: 0;
-	}
+    .fxb-container .fxb-row .fxb-col {
+        width: 100%;
+        margin: 0;
+    }
 
     .fxb-row > .fxb-wrap {
         flex-wrap: wrap;
@@ -91,7 +100,12 @@
     .fxb-row-layout-14_14_14_14 .fxb-col-1,
     .fxb-row-layout-14_14_14_14 .fxb-col-2,
     .fxb-row-layout-14_14_14_14 .fxb-col-3,
-    .fxb-row-layout-14_14_14_14 .fxb-col-4 {
+    .fxb-row-layout-14_14_14_14 .fxb-col-4,
+    .fxb-row-layout-15_15_15_15_15 .fxb-col-1,
+    .fxb-row-layout-15_15_15_15_15 .fxb-col-2,
+    .fxb-row-layout-15_15_15_15_15 .fxb-col-3,
+    .fxb-row-layout-15_15_15_15_15 .fxb-col-4,
+    .fxb-row-layout-15_15_15_15_15 .fxb-col-5 {
         width: 100%;
     }
 }
