--- a/includes/builder/assets/page-builder.css
+++ b/includes/builder/assets/page-builder.css
@@ -432,8 +432,7 @@
 .fxb-modal-container {
     display: flex;
     flex-direction: column;
-    max-height: 100%;
-    height: 100%;
+    max-height: calc(100vh - 40px);
 }
 .fxb-modal *,
 .fxb-modal *:before,
