--- a/includes/builder/assets/front.css
+++ b/includes/builder/assets/front.css
@@ -1,6 +1,5 @@
 .fxb-row > .fxb-wrap {
-    display: flex;
-    flex-wrap: nowrap;
+    display: grid;
     gap: var(--fxb-template-gap, 2em);
 }
 .fxb-row > .fxb-wrap[style*="height:"] {
@@ -19,56 +18,36 @@
 .fxb-row .fxb-col {
     box-sizing: border-box;
     padding: var(--fxb-row-col-padding, 0);
+    min-width: 0;
 }
 
-.fxb-row-layout-1 .fxb-col {
-    width: 100%;
+/* Grid templates per layout */
+.fxb-row-layout-1 > .fxb-wrap {
+    grid-template-columns: 1fr;
 }
 
-/* 1/2 - 1/2 Layout */
-.fxb-row-layout-12_12 .fxb-col-1,
-.fxb-row-layout-12_12 .fxb-col-2 {
-    width: 50%;
+.fxb-row-layout-12_12 > .fxb-wrap {
+    grid-template-columns: 1fr 1fr;
 }
 
-/* 1/3 - 2/3 Layout */
-.fxb-row-layout-13_23 .fxb-col-1 {
-    width: 33.33%;
-}
-.fxb-row-layout-13_23 .fxb-col-2 {
-    width: 66.66%;
+.fxb-row-layout-13_23 > .fxb-wrap {
+    grid-template-columns: 1fr 2fr;
 }
 
-/* 2/3 - 1/3 layout */
-.fxb-row-layout-23_13 .fxb-col-1 {
-    width: 66.66%;
-}
-.fxb-row-layout-23_13 .fxb-col-2 {
-    width: 33.33%;
+.fxb-row-layout-23_13 > .fxb-wrap {
+    grid-template-columns: 2fr 1fr;
 }
 
-/* 1/3 - 1/3 - 1/3 Layout */
-.fxb-row-layout-13_13_13 .fxb-col-1,
-.fxb-row-layout-13_13_13 .fxb-col-2,
-.fxb-row-layout-13_13_13 .fxb-col-3 {
-    width: 33.33%;
+.fxb-row-layout-13_13_13 > .fxb-wrap {
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-/* 1/4 - 1/4 - 1/4 - 1/4 Layout */
-.fxb-row-layout-14_14_14_14 .fxb-col-1,
-.fxb-row-layout-14_14_14_14 .fxb-col-2,
-.fxb-row-layout-14_14_14_14 .fxb-col-3,
-.fxb-row-layout-14_14_14_14 .fxb-col-4 {
-    width: 25%;
+.fxb-row-layout-14_14_14_14 > .fxb-wrap {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-/* 1/5 - 1/5 - 1/5 - 1/5 - 1/5 Layout */
-.fxb-row-layout-15_15_15_15_15 .fxb-col-1,
-.fxb-row-layout-15_15_15_15_15 .fxb-col-2,
-.fxb-row-layout-15_15_15_15_15 .fxb-col-3,
-.fxb-row-layout-15_15_15_15_15 .fxb-col-4,
-.fxb-row-layout-15_15_15_15_15 .fxb-col-5 {
-    width: 20%;
+.fxb-row-layout-15_15_15_15_15 > .fxb-wrap {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .fxb-item {
@@ -88,37 +67,4 @@
 .fxb-wrap img {
     max-width: 100%;
     height: auto;
-}
-
-@media screen and (max-width: 768px) {
-    .fxb-container .fxb-row .fxb-col {
-        width: 100%;
-        margin: 0;
-    }
-
-    .fxb-row > .fxb-wrap {
-        flex-wrap: wrap;
-    }
-
-    .fxb-row-layout-1 .fxb-col,
-    .fxb-row-layout-12_12 .fxb-col-1,
-    .fxb-row-layout-12_12 .fxb-col-2,
-    .fxb-row-layout-13_23 .fxb-col-1,
-    .fxb-row-layout-13_23 .fxb-col-2,
-    .fxb-row-layout-23_13 .fxb-col-1,
-    .fxb-row-layout-23_13 .fxb-col-2,
-    .fxb-row-layout-13_13_13 .fxb-col-1,
-    .fxb-row-layout-13_13_13 .fxb-col-2,
-    .fxb-row-layout-13_13_13 .fxb-col-3,
-    .fxb-row-layout-14_14_14_14 .fxb-col-1,
-    .fxb-row-layout-14_14_14_14 .fxb-col-2,
-    .fxb-row-layout-14_14_14_14 .fxb-col-3,
-    .fxb-row-layout-14_14_14_14 .fxb-col-4,
-    .fxb-row-layout-15_15_15_15_15 .fxb-col-1,
-    .fxb-row-layout-15_15_15_15_15 .fxb-col-2,
-    .fxb-row-layout-15_15_15_15_15 .fxb-col-3,
-    .fxb-row-layout-15_15_15_15_15 .fxb-col-4,
-    .fxb-row-layout-15_15_15_15_15 .fxb-col-5 {
-        width: 100%;
-    }
 }
