--- a/includes/builder/assets/tools.css
+++ b/includes/builder/assets/tools.css
@@ -1,21 +1,22 @@
-.fxb-nav-tools{
-	font-size: 14px;
-	float: right;
-	text-decoration: none;
-	padding: 5px 10px;
-	background: #F5F5F5;
-	border: 1px solid #ccc;
-	color: #555;
-	font-weight: 400;
-	margin-right: 10px;
-	display: none;
+.fxb-nav-tools {
+    font-size: 14px;
+    float: right;
+    text-decoration: none;
+    padding: 0.334em 0.667em;
+    background: #f5f5f5;
+    border: 1px solid #cccccc;
+    border-radius: 6px;
+    color: #555555;
+    font-weight: 400;
+    margin-right: 0.25em;
+    display: none;
 }
-.rtl .fxb-nav-tools{
+.rtl .fxb-nav-tools {
 	float: left;
 	margin-right: 0;
-	margin-left: 10px;
+	margin-left: 0.25em;
 }
-.fx_builder_active .fxb-nav-tools{
+.fx_builder_active .fxb-nav-tools {
 	display: block;
 }
 .fxb-nav-tools:hover,
@@ -23,13 +24,7 @@
 	color: #222;
 	background: #eee;
 }
-.fxb-nav-tools span:before{
-	content: "\f107";
-	font-family: "dashicons";
-	vertical-align: top;
-	margin-right: 5px;
-	-webkit-font-smoothing: antialiased;
-}
+
 /* Modal */
 .fxb-tools.fxb-modal .fxb-modal-content{
 	padding-top: 5px;
@@ -53,10 +48,3 @@
 		margin: 10px 10px 0 0;
 	}
 }
-@media only screen and (max-width: 390px) {
-	.fxb-nav-tools span:before{
-		content: "";
-		margin-right: 0;
-	}
-}
-
